Artem_Zhivushko/12.Kubernetes.Data.Security/application/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx-service
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: nginx-app
---
apiVersion: v1
kind: Service
metadata:
  name: php-fpm
  labels:
    run: php-fpm
spec:
  selector:
    app: php-fpm
  type: ClusterIP
  ports:
  - name: php-fpm
    port: 9000
    targetPort: 9000
