Artem_Zhivushko/12.Kubernetes.Data.Security/application/01_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-sa
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "nginx-test.k8s-6.sa"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-test.k8s-5.sa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
